v1.2.10/_sources/fm_schema.rst.txt
Parameter Scheme
================

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.BaseSchema
   :members:
   :exclude-members: to_dict, from_dict
   :undoc-members:
   :show-inheritance:

Chat Parameters
---------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatParameters
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatResponseFormat
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatResponseFormatType
   :members:
   :exclude-members:
   :undoc-members:
   :show-inheritance:

Generate Parameters
-------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenParameters
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.ReturnOptionProperties
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenLengthPenalty
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenDecodingMethod
   :members:
   :exclude-members:
   :undoc-members:
   :show-inheritance:

Rerank Parameters
-----------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.RerankParameters
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.RerankReturnOptions
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:


TSModelInference Parameters
---------------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TSForecastParameters
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:


PeftParameters Parameters
-------------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.PeftParameters
   :members:
   :exclude-members: get_sample_params
   :undoc-members:
   :show-inheritance:
