v1.4.11/_sources/fm_schema.rst.txt
Parameter Scheme
================

Below, you can find enums and dataclasses that are useful for specifying more complex parameters.

For each dataclass you can call the following methods:

- ``get_sample_params()``

Example:

.. code-block:: python

    PeftParameters.get_sample_params()
    # {
    #     "type": "lora",
    #     "rank": 8,
    #     "target_modules": ["all-linear"],
    #     "lora_alpha": 32,
    #     "lora_dropout": 0.05,
    # }

- ``show()``

Example:

.. code-block:: python

    PeftParameters.show()
    # +----------------+-----------------+-----------------+
    # | PARAMETER      | TYPE            | EXAMPLE VALUE   |
    # +================+=================+=================+
    # | type           | str             | lora            |
    # +----------------+-----------------+-----------------+
    # | rank           | int, NoneType   | 8               |
    # +----------------+-----------------+-----------------+
    # | target_modules | list, NoneType  | ['all-linear']  |
    # +----------------+-----------------+-----------------+
    # | lora_alpha     | int, NoneType   | 32              |
    # +----------------+-----------------+-----------------+
    # | lora_dropout   | float, NoneType | 0.05            |
    # +----------------+-----------------+-----------------+

Chat Parameters
---------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatParameters
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatResponseFormat
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatResponseFormatType
    :members:
    :exclude-members:
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextChatResponseJsonSchema
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

Generate Parameters
-------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenParameters
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.ReturnOptionProperties
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenLengthPenalty
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TextGenDecodingMethod
    :members:
    :exclude-members:
    :undoc-members:
    :show-inheritance:

Rerank Parameters
-----------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.RerankParameters
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.RerankReturnOptions
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

TSModelInference Parameters
---------------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.TSForecastParameters
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

PeftParameters Parameters
-------------------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.PeftParameters
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:

GuardianDetectors
-----------------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.GuardianDetectors
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:


Crypto
------

.. autoclass:: ibm_watsonx_ai.foundation_models.schema.Crypto
    :members:
    :exclude-members: get_sample_params
    :undoc-members:
    :show-inheritance:
